vhdl_syntax/src/parser/snapshots/vhdl_syntax__parser__error_recovery__tests__diagnostics.snap
---
source: vhdl_syntax/src/parser/error_recovery.rs
expression: use foo.bar
---
1:12 Expected([SemiColon])
