vhdl_syntax/src/parser/snapshots/vhdl_syntax__parser__error_recovery__tests__label_without_statement.snap
---
source: vhdl_syntax/src/parser/error_recovery.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
architecture arch of ent is
begin
    p :
end arch;


== tree ==
DesignFile
  DesignUnit
    ArchitectureBody
      ArchitecturePreamble
        Keyword(Architecture)
        Identifier 'arch'
        Keyword(Of)
        Name
          NameDesignatorPrefix
            Identifier 'ent'
        Keyword(Is)
      DeclarationStatementSeparator
        Keyword(Begin)
      ArchitectureStatementPart
        StmtLabel
          Identifier 'p'
          Colon
      ArchitectureEpilogue
        Keyword(End)
        Identifier 'arch'
        SemiColon
  Eof

== diagnostics ==
3:8 expected 'block', 'process', 'component', 'configuration', 'entity', 'for', 'if', 'case', 'assert', 'with', Identifier, '<<', StringLiteral or CharacterLiteral
