vhdl_syntax/src/parser/snapshots/vhdl_syntax__parser__error_recovery__tests__missing_semicolon.snap
---
source: vhdl_syntax/src/parser/error_recovery.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
use foo.bar

== tree ==
DesignFile
  DesignUnit
    ContextClause
      UseClauseContextItem
        UseClause
          Keyword(Use)
          NameList
            Name
              Identifier 'foo'
              SelectedName
                Dot
                Identifier 'bar'
  Eof

== diagnostics ==
1:12 Expected([SemiColon])
