vhdl_syntax/src/parser/snapshots/vhdl_syntax__parser__error_recovery__tests__missing_semicolon_and_name.snap
---
source: vhdl_syntax/src/parser/error_recovery.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
use

== tree ==
DesignFile
  DesignUnit
    ContextClause
      UseClauseContextItem
        UseClause
          Keyword(Use)
  Eof

== diagnostics ==
1:4 Expected([Identifier, StringLiteral, CharacterLiteral])
1:4 Expected([SemiColon])
