vhdl_syntax/src/parser/snapshots/vhdl_syntax__parser__error_recovery__tests__tree.snap
---
source: vhdl_syntax/src/parser/error_recovery.rs
expression: use foo.bar
---
DesignFile
  DesignUnit
    ContextClause
      UseClauseContextItem
        UseClause
          Keyword(Use)
          NameList
            Name
              Identifier 'foo'
              SelectedName
                Dot
                Identifier 'bar'
  Eof
